Finished all inputs of the steps for the application portal
